--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -64,7 +64,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tv_name"
         app:srcCompat="@drawable/ic_edit"
-        app:tint="@color/black" />
+        app:tint="@color/brown" />
 
     <TextView
         android:id="@+id/tv_description"
@@ -94,16 +94,17 @@
         app:layout_constraintEnd_toStartOf="@+id/img_edit"
         app:layout_constraintTop_toTopOf="@+id/tv_name"
         app:srcCompat="@drawable/ic_favourite"
-        app:tint="@color/black" />
+        app:tint="@color/brown"/>
 
     <Button
         android:id="@+id/btn_delete"
-        android:layout_width="0dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
         android:text="Delete Recipe"
+        android:background="@drawable/button_background"
         android:backgroundTint="#492C09"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -119,5 +120,6 @@
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="@+id/img_fvrt"
         app:layout_constraintTop_toBottomOf="@+id/img_fvrt"
-        app:srcCompat="@drawable/ic_share" />
+        app:srcCompat="@drawable/ic_share"
+        app:tint="@color/brown"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
